# foundation-archive

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.archiver  LICENSE  README.md  SECURITY.md  docker-compose.postgres.yml  eslint.config.js  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.codex-artifacts/foundation-archive-image-brief/: brief.html  build_pdf.py
.githooks/: post-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/: .env.production.example  deploy-hook.env.example  docker-compose.yml
deploy/kubo-init/: 001-bind-addresses.sh  001-enable-filestore.sh  002-split-datastore.sh
deploy/umami/: .env.example  docker-compose.yml
prisma/: schema.prisma
public/: robots.txt
rust-archiver/: Cargo.toml
rust-archiver/src/: main.rs
scripts/: apply-profile-asset-schema.ts  backfill-cid-index.ts  backfill-profile-assets.ts  clean-dev.mjs  dev.mjs  hydrate-directory-cids.ts  migrate-kubo-pins-fast.sh  migrate-kubo-pins.ts  normalize-next-generated-files.mjs  process-queue.ts  queue-contract-scan.ts  queue-foundation-urls.ts  requeue-dependency-backfill.ts  reset-foundation-shared-crawler.ts  seed-contracts.ts  socket-server.ts  test-kubo-pin.ts  tsxe.mjs  worker.ts
scripts/deploy/: configure-origin-push-mirrors.sh  push-to-node.sh  remote-update.sh
src/: env.js
src/app/: error.tsx  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
src/lib/: archive-browse.ts  (+8 more)
(+219 files in other folders)
